Badges: Fix modal not showing overflowing user combobox

--- a/app/styles/utils.css
+++ b/app/styles/utils.css
@@ -174,6 +174,10 @@
   visibility: hidden;
 }
 
+.overflow-visible {
+  overflow: visible;
+}
+
 .whitespace-pre-wrap {
   white-space: pre-wrap;
 }
